logs/mrsd_ros_tutorials/build.make.076.log.stderr
The dependencies of the message/service 'mrsd_ros_tutorials/SaveData' have changed. Please rerun cmake.
make[2]: *** [CMakeFiles/_mrsd_ros_tutorials_generate_messages_check_deps_SaveData] Error 1
make[1]: *** [CMakeFiles/_mrsd_ros_tutorials_generate_messages_check_deps_SaveData.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/perception_data.cpp: In function ‘void segment_bin(pcl::PointCloud<pcl::PointXYZRGB>::Ptr)’:
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/perception_data.cpp:42:38: error: no matching function for call to ‘pcl::PassThrough<pcl::PointXYZ>::setInputCloud(pcl::PointCloud<pcl::PointXYZRGB>::Ptr&)’
   pass.setInputCloud (kinect_color_pc);
                                      ^
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/perception_data.cpp:42:38: note: candidate is:
In file included from /usr/include/pcl-1.7/pcl/common/io.h:45:0,
                 from /usr/include/pcl-1.7/pcl/io/io.h:43,
                 from /home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/perception_data.cpp:11:
/usr/include/pcl-1.7/pcl/pcl_base.h:95:7: note: void pcl::PCLBase<PointT>::setInputCloud(const PointCloudConstPtr&) [with PointT = pcl::PointXYZ; pcl::PCLBase<PointT>::PointCloudConstPtr = boost::shared_ptr<const pcl::PointCloud<pcl::PointXYZ> >]
       setInputCloud (const PointCloudConstPtr &cloud);
       ^
/usr/include/pcl-1.7/pcl/pcl_base.h:95:7: note:   no known conversion for argument 1 from ‘pcl::PointCloud<pcl::PointXYZRGB>::Ptr {aka boost::shared_ptr<pcl::PointCloud<pcl::PointXYZRGB> >}’ to ‘const PointCloudConstPtr& {aka const boost::shared_ptr<const pcl::PointCloud<pcl::PointXYZ> >&}’
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/perception_data.cpp:46:32: error: no matching function for call to ‘pcl::PassThrough<pcl::PointXYZ>::filter(pcl::PointCloud<pcl::PointXYZRGB>&)’
   pass.filter (*kinect_color_pc);
                                ^
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/perception_data.cpp:46:32: note: candidates are:
In file included from /usr/include/pcl-1.7/pcl/filters/passthrough.h:43:0,
                 from /home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/perception_data.cpp:24:
/usr/include/pcl-1.7/pcl/filters/filter_indices.h:103:7: note: void pcl::FilterIndices<PointT>::filter(pcl::FilterIndices<PointT>::PointCloud&) [with PointT = pcl::PointXYZ; pcl::FilterIndices<PointT>::PointCloud = pcl::PointCloud<pcl::PointXYZ>]
       filter (PointCloud &output)
       ^
/usr/include/pcl-1.7/pcl/filters/filter_indices.h:103:7: note:   no known conversion for argument 1 from ‘pcl::PointCloud<pcl::PointXYZRGB>’ to ‘pcl::FilterIndices<pcl::PointXYZ>::PointCloud& {aka pcl::PointCloud<pcl::PointXYZ>&}’
/usr/include/pcl-1.7/pcl/filters/filter_indices.h:112:7: note: void pcl::FilterIndices<PointT>::filter(std::vector<int>&) [with PointT = pcl::PointXYZ]
       filter (std::vector<int> &indices)
       ^
/usr/include/pcl-1.7/pcl/filters/filter_indices.h:112:7: note:   no known conversion for argument 1 from ‘pcl::PointCloud<pcl::PointXYZRGB>’ to ‘std::vector<int>&’
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/perception_data.cpp: In function ‘int main(int, char**)’:
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/perception_data.cpp:76:9: error: ‘kinect_color_pc’ was not declared in this scope
         kinect_color_pc = segment_bin(point_cloud);
         ^
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/perception_data.cpp:76:39: error: ‘point_cloud’ was not declared in this scope
         kinect_color_pc = segment_bin(point_cloud);
                                       ^
make[2]: *** [CMakeFiles/perception_data.dir/src/perception_data.cpp.o] Error 1
make[1]: *** [CMakeFiles/perception_data.dir/all] Error 2
make: *** [all] Error 2
